@@ -7,6 +7,7 @@ Usage    : BREW (LIST) [POTION NAME] [BREWING CONTAINER]\n\r\
 Example  : brew heal flask\n\r\
 :        : brew list\n\r\
 :        : brew list cure\n\r\
+:        : brew list 5-10\n\r\
 :        : brew list all\n\r\
 This skill allows the player to brew a potion from one of the \
 spells or prayers the player knows.  To do this, the player must \
@@ -75,6 +76,7 @@ Usage    : MIX LIST/[BREWING CONTAINER]\n\r\
 Example  : mix pot\n\r\
 :        : mix list\n\r\
 :        : mix list slumber\n\r\
+:        : mix list 5-10\n\r\
 :        : mix list all\n\r\
 This skill allows the player to create a deadly poison from basic \
 ingredients.  The player must be near a fire over which the poison \
@@ -91,6 +93,7 @@ Example  : armorsmith platemail shirt\n\r\
 :        : armorsmith list\n\r\
 :        : armorsmith list vest\n\r\
 :        : armorsmith list left wrist\n\r\
+:        : armorsmith list 5-10\n\r\
 :        : armorsmith list all\n\r\
 :        : armorsmith info vest\n\r\
 :        : armorsmith mend vest\n\r\
@@ -146,6 +149,7 @@ BAKING=<ABILITY>\
 Usage    : BAKE LIST/[BAKING CONTAINER]\n\r\
 Example  : bake list\n\r\
 Example  : bake list oven\n\r\
+Example  : bake list 5-10\n\r\
 Example  : bake list all\n\r\
 Example  : bake oven\n\r\
 This skill allows the player to create a more nutritious meal from basic \
@@ -173,6 +177,7 @@ Example  : blacksmith pot\n\r\
 :        : blacksmith bundle 100 iron\n\r\
 :        : blacksmith list\n\r\
 :        : blacksmith list pot\n\r\
+:        : blacksmith list 5-10\n\r\
 :        : blacksmith list all\n\r\
 :        : blacksmith learn pot\n\r\
 This skill allows a player to craft metal items, such as pots and \
@@ -192,6 +197,7 @@ Usage    : BOATWRIGHT (LIST/INFO/MEND/SCAN) [ITEM NAME]\n\r\
 Example  : boatwright canoe\n\r\
 :        : boatwright list\n\r\
 :        : boatwright list canoe\n\r\
+:        : boatwright list 5-10\n\r\
 :        : boatwright list all\n\r\
 :        : boatwright mend canoe\n\r\
 :        : boatwright scan\n\r\
@@ -290,6 +296,7 @@ Usage    : CAGEBUILD (LIST/LEARN) [ITEM TYPE]\n\r\
 Example  : cagebuild cage\n\r\
 :        : cagebuild list\n\r\
 :        : cagebuild list cage\n\r\
+:        : cagebuild list 5-10\n\r\
 :        : cagebuild list all\n\r\
 :        : cagebuild learn cage\n\r\
 This skill allows a player to craft cages and wagon cages.  The extent of \
@@ -321,6 +328,7 @@ Example  : carve small table\n\r\
 :        : carve bundle 100 maple\n\r\
 :        : carve list\n\r\
 :        : carve list table\n\r\
+:        : carve list 5-10\n\r\
 :        : carve list all\n\r\
 :        : carve mend club\n\r\
 :        : carve refit club\n\r\
@@ -368,6 +376,7 @@ Available: Enchanter Clan Members\n\r\
 Example  : clancraft flag\n\r\
 :        : clancraft list\n\r\
 :        : clancraft list flag\n\r\
+:        : clancraft list 5-10\n\r\
 :        : clancraft list all\n\r\
 This skill allows a player to craft clan items.  \
 The clan items from this skill require that the clan have \
@@ -395,6 +404,7 @@ Usage    : CLANSHIPWRIGHT (LIST/INFO/MEND/SCAN) [ITEM NAME]\n\r\
 Example  : clanshipwright cruiser\n\r\
 :        : clanshipwright list\n\r\
 :        : clanshipwright list cruiser\n\r\
+:        : clanshipwright list 5-10\n\r\
 :        : clanshipwright list all\n\r\
 :        : clanshipwright mend cruiser\n\r\
 :        : clanshipwright scan\n\r\
@@ -432,6 +442,7 @@ Example  : cobble shoes\n\r\
 :        : cobble bundle 100 oak\n\r\
 :        : cobble list\n\r\
 :        : cobble list shoe\n\r\
+:        : cobble list 5-10\n\r\
 :        : cobble list all\n\r\
 :        : cobble mend shoe\n\r\
 :        : cobble refit boots\n\r\
@@ -485,6 +496,7 @@ COOKING=<ABILITY>\
 Usage    : COOK LIST/[COOKING CONTAINER]\n\r\
 Example  : cook list\n\r\
 Example  : cook list stew\n\r\
+Example  : cook list 5-10\n\r\
 Example  : cook list all\n\r\
 Example  : cook pot\n\r\
 This skill allows the player to create a more nutritious meal from basic \
@@ -501,6 +513,7 @@ Usage    : COSTUME (LIST/INFO/MEND/REFIT/SCAN/LEARN) [ITEM TYPE]\n\r\
 Example  : costume habit\n\r\
 :        : costume list\n\r\
 :        : costume list habit\n\r\
+:        : costume list 5-10\n\r\
 :        : costume list all\n\r\
 :        : costume mend habit\n\r\
 :        : costume refit habit\n\r\
@@ -539,6 +552,7 @@ Usage    : DISTILL LIST/[BREWING CONTAINER]\n\r\
 Example  : distill pot\n\r\
 :        : distill list\n\r\
 :        : distill list whiskey\n\r\
+:        : distill list 5-10\n\r\
 :        : distill list all\n\r\
 This skill allows the player to create a beer and other liquors from basic \
 ingredients.  The player must be near a fire over which the alcohol \
@@ -700,6 +714,7 @@ Usage    : FLETCH (LIST/INFO/LEARN) [ITEM TYPE]\n\r\
 Example  : fletch short bow\n\r\
 :        : fletch list\n\r\
 :        : fletch list bow\n\r\
+:        : fletch list 5-10\n\r\
 :        : fletch list all\n\r\
 :        : fletch learn crossbow\n\r\
 This skill allows a player to craft ranged wooden weapons, such as \
@@ -727,6 +742,7 @@ Usage    : FOODPREP LIST/[CONTAINER]\n\r\
 Example  : foodprep bowl\n\r\
 Example  : foodprep list\n\r\
 Example  : foodprep list salad\n\r\
+Example  : foodprep list 5-10\n\r\
 Example  : foodprep list all\n\r\
 This skill allows the player to create a more nutritious meal from basic \
 edible ingredients.  The ingredients must be placed in a preparation container, \
@@ -764,6 +780,7 @@ Usage    : GAOLFOOD LIST/[CONTAINER]\n\r\
 Example  : gaolfood bowl\n\r\
 Example  : gaolfood list\n\r\
 Example  : gaolfood list moldy\n\r\
+Example  : gaolfood list 5-10\n\r\
 Example  : gaolfood list all\n\r\
 This skill allows the player to create a somewhat nutritious but disgusting meal from basic \
 edible ingredients for the consumption of prisoners.  The ingredients must be placed in a preparation container, \
@@ -805,6 +822,7 @@ Usage    : GLASSBLOW (LIST/INFO/LEARN) [ITEM TYPE]\n\r\
 Example  : glassblow pot\n\r\
 :        : glassblow list\n\r\
 :        : glassblow list wand\n\r\
+:        : glassblow list 5-10\n\r\
 :        : glassblow list all\n\r\
 :        : glassblow learn mug\n\r\
 This skill allows a player to craft glass items, such as cups and \
@@ -824,6 +842,7 @@ Usage    : HBREW (LIST) [BREW NAME] [BREWING CONTAINER]\n\r\
 Example  : hbrew farsight flask\n\r\
 :        : hbrew list\n\r\
 :        : hbrew list harden\n\r\
+:        : hbrew list 5-10\n\r\
 :        : hbrew list all\n\r\
 This skill allows the player to brew a potion from one of the \
 chants the player knows.  To do this, the player must \
@@ -866,6 +885,7 @@ Usage    : INSTRUMENTMAKE (LIST/INFO/LEARN) [ITEM TYPE]\n\r\
 Example  : instrumentmake piccolo\n\r\
 :        : instrumentmake list\n\r\
 :        : instrumentmake list piccolo\n\r\
+:        : instrumentmake list 5-10\n\r\
 :        : instrumentmake list all\n\r\
 :        : instrumentmake learn flute\n\r\
 This skill allows a player to craft musical instruments, such as flutes and \
@@ -905,6 +925,7 @@ Usage    : JEWEL (LIST/INFO/MEND/REFIT/LEARN/MOUNT (GEM)/ENCRUST (GEM)) [ITEM TY
 Example  : jewel ring\n\r\
 :        : jewel list\n\r\
 :        : jewel list ring\n\r\
+:        : jewel list 5-10\n\r\
 :        : jewel list all\n\r\
 :        : jewel encrust "a diamond" backpack\n\r\
 :        : jewel mount "a diamond" sword\n\r\
@@ -967,6 +988,7 @@ Example  : leatherwork pot\n\r\
 :        : leatherwork bundle 100 leather\n\r\
 :        : leatherwork list\n\r\
 :        : leatherwork list hard\n\r\
+:        : leatherwork list 5-10\n\r\
 :        : leatherwork list all\n\r\
 :        : leatherwork mend vest\n\r\
 :        : leatherwork refit sleeves\n\r\
@@ -1006,6 +1028,7 @@ Example  : lweaponsmith twohanded sword\n\r\
 :        : lweaponsmith list\n\r\
 :        : lweaponsmith list sword\n\r\
 :        : lweaponsmith list blunt\n\r\
+:        : lweaponsmith list 60-70\n\r\
 :        : lweaponsmith list all\n\r\
 :        : lweaponsmith scan\n\r\
 :        : lweaponsmith scan bob\n\r\
@@ -1092,6 +1115,7 @@ Example  : marmorsmith chainmail\n\r\
 :        : marmorsmith list\n\r\
 :        : marmorsmith list chain\n\r\
 :        : marmorsmith list left wrist\n\r\
+:        : marmorsmith list 40-50\n\r\
 :        : marmorsmith list all\n\r\
 :        : marmorsmith scan\n\r\
 :        : marmorsmith scan bob\n\r\
@@ -1119,6 +1143,8 @@ MASTER_BAKING=<ABILITY>\
 Usage    : MASTERBAKE LIST/[BAKING CONTAINER]\n\r\
 Example  : masterbake list\n\r\
 Example  : masterbake list oven\n\r\
+Example  : masterbake list 5-10\n\r\
+Example  : masterbake list 5-10\n\r\
 Example  : masterbake list all\n\r\
 Example  : masterbake oven\n\r\
 This skill allows the player to create a more nutritious meal from basic \
@@ -1151,6 +1177,7 @@ MASTER_COOKING=<ABILITY>\
 Usage    : MASTERCOOK LIST/[COOKING CONTAINER]\n\r\
 Example  : mastercook list\n\r\
 Example  : mastercook list stew\n\r\
+Example  : mastercook list 5-10\n\r\
 Example  : mastercook list all\n\r\
 Example  : mastercook pot\n\r\
 This skill allows the player to create a more nutritious meal from basic \
@@ -1173,6 +1200,7 @@ Usage    : MCOSTUME (LIST/INFO/MEND/REFIT/SCAN/LEARN) [ITEM TYPE]\n\r\
 Example  : mcostume shirt\n\r\
 :        : mcostume list\n\r\
 :        : mcostume list shirt\n\r\
+:        : mcostume list 5-10\n\r\
 :        : mcostume list all\n\r\
 :        : mcostume mend shirt\n\r\
 :        : mcostume refit shirt\n\r\
@@ -1201,6 +1229,7 @@ Usage    : MASTERDISTILL LIST/[BREWING CONTAINER]\n\r\
 Example  : masterdistill pot\n\r\
 :        : masterdistill list\n\r\
 :        : masterdistill list whiskey\n\r\
+:        : masterdistill list 35-40\n\r\
 :        : masterdistill list all\n\r\
 This skill allows the player to create a beer and other liquors from basic \
 ingredients.  The player must be near a fire over which the alcohol \
@@ -1303,6 +1332,7 @@ Usage    : MASTERFOODPREP LIST/[CONTAINER]\n\r\
 Example  : masterfoodprep bowl\n\r\
 Example  : masterfoodprep list\n\r\
 Example  : masterfoodprep list salad\n\r\
+Example  : masterfoodprep list 5-10\n\r\
 Example  : masterfoodprep list all\n\r\
 This skill allows the player to create a more nutritious meal from basic \
 edible ingredients.  The ingredients must be placed in a preparation container, \
@@ -1384,7 +1414,8 @@ Example  : mleatherwork vest\n\r\
 :        : mleatherwork bundle 100 leather\n\r\
 :        : mleatherwork list\n\r\
 :        : mleatherwork list vest\n\r\
-:        : mleatherwork list all\n\r\
+:        : mleatherwork list 5-10\n\r\
+:        : mleatherwork list 30-40\n\r\
 :        : mleatherwork mend vest\n\r\
 :        : mleatherwork refit sleeves\n\r\
 :        : mleatherwork scan\n\r\
@@ -1436,6 +1467,7 @@ Example  : mknit shirt\n\r\
 :        : mknit bundle 100 cotton\n\r\
 :        : mknit list\n\r\
 :        : mknit list vest\n\r\
+:        : mknit list 30-40\n\r\
 :        : mknit list all\n\r\
 :        : mknit mend vest\n\r\
 :        : mknit refit sleeves\n\r\
@@ -1477,6 +1509,7 @@ Example  : mweaponsmith twohanded sword\n\r\
 :        : mweaponsmith list\n\r\
 :        : mweaponsmith list sword\n\r\
 :        : mweaponsmith list blunt\n\r\
+:        : mweaponsmith list 30-40\n\r\
 :        : mweaponsmith list all\n\r\
 :        : mweaponsmith scan\n\r\
 :        : mweaponsmith scan bob\n\r\
@@ -1603,6 +1636,7 @@ Example  : pot pitcher\n\r\
 :        : pot bundle 100 clay\n\r\
 :        : pot list\n\r\
 :        : pot list pitcher\n\r\
+:        : pot list 5-10\n\r\
 :        : pot list all\n\r\
 :        : pot learn pot\n\r\
 This skill allows a player to craft cooked clay items, such as cups and \
@@ -1646,6 +1680,7 @@ Usage    : RODSMITH (LIST/INFO/MEND/SCAN/LEARN) [STAFF NAME]\n\r\
 Example  : rodsmith rod\n\r\
 :        : rodsmith list\n\r\
 :        : rodsmith list rod\n\r\
+:        : rodsmith list 5-10\n\r\
 :        : rodsmith list all\n\r\
 :        : rodsmith scan\n\r\
 :        : rodsmith scan bob\n\r\
@@ -1688,6 +1723,7 @@ Example  : scrim small table\n\r\
 :        : scrim bundle 100 bone\n\r\
 :        : scrim list\n\r\
 :        : scrim list sword\n\r\
+:        : scrim list 5-10\n\r\
 :        : scrim list all\n\r\
 :        : scrim mend sword\n\r\
 :        : scrim refit earrings\n\r\
@@ -1716,6 +1752,7 @@ Usage    : ENSCRIBE (LIST) [SPELL NAME] [BLANK SCROLL]\n\r\
 Usage    : ENSCRIBE [SPELL NAME] FROM [FIRST SCROLL] [OTHER SCROLL]\n\r\
 Example  : enscribe iron grip scroll\n\r\
 :        : enscribe list\n\r\
+:        : enscribe list 5-10\n\r\
 :        : enscribe list all\n\r\
 :        : enscribe list iron\n\r\
 :        : enscribe iron grip from "scroll of iron grip" "a scroll"\n\r\
@@ -1737,6 +1774,7 @@ Example  : sculpt bench\n\r\
 :        : sculpt statue of the great Alramus\n\r\
 :        : sculpt list\n\r\
 :        : sculpt list statue\n\r\
+:        : sculpt list 5-10\n\r\
 :        : sculpt list all\n\r\
 :        : sculpt mend avalanche\n\r\
 :        : sculpt scan\n\r\
@@ -1774,6 +1812,7 @@ Usage    : SHIPWRIGHT (LIST/INFO/MEND/SCAN) [ITEM NAME]\n\r\
 Example  : shipwright cruiser\n\r\
 :        : shipwright list\n\r\
 :        : shipwright list cruiser\n\r\
+:        : shipwright list 5-10\n\r\
 :        : shipwright list all\n\r\
 :        : shipwright mend cruiser\n\r\
 :        : shipwright scan\n\r\
@@ -1795,11 +1834,12 @@ The raw wood for building is found using the Chopping skill.
 
 SIEGECRAFT=<ABILITY>\
 Usage    : SIEGECRAFT (LIST/INFO/LEARN) [ITEM TYPE]\n\r\
-Example  : SIEGECRAFT catapult\n\r\
-:        : SIEGECRAFT list\n\r\
-:        : SIEGECRAFT list catapult\n\r\
-:        : SIEGECRAFT list all\n\r\
-:        : SIEGECRAFT learn catapult\n\r\
+Example  : siegecraft catapult\n\r\
+:        : siegecraft list\n\r\
+:        : siegecraft list catapult\n\r\
+:        : siegecraft list 5-10\n\r\
+:        : siegecraft list all\n\r\
+:        : siegecraft learn catapult\n\r\
 This skill allows a player to craft siege weapons for ship \
 combat, such as trebuchets, catapults, and ballistas, as well as the necessary \
 ammunitions (shots, boulders and bolts, respectively). The extent of the \
@@ -1881,6 +1921,7 @@ Usage    : STAFFMAKE (LIST/INFO/MEND/SCAN/LEARN) [STAFF NAME]\n\r\
 Example  : staffmake Iron-shod Staff\n\r\
 :        : staffmake list\n\r\
 :        : staffmake list Iron-shod\n\r\
+:        : staffmake list 5-10\n\r\
 :        : staffmake list all\n\r\
 :        : staffmake scan\n\r\
 :        : staffmake scan bob\n\r\
@@ -1918,6 +1959,7 @@ Example  : knit shirt\n\r\
 :        : knit bundle 100 cotton\n\r\
 :        : knit list\n\r\
 :        : knit list vest\n\r\
+:        : knit list 5-10\n\r\
 :        : knit list all\n\r\
 :        : knit mend vest\n\r\
 :        : knit refit sleeves\n\r\
@@ -2012,6 +2054,7 @@ Usage    : TORTURESMITH (LIST/INFO) [ITEM NAME]\n\r\
 Example  : torturesmith rack\n\r\
 :        : torturesmith list\n\r\
 :        : torturesmith list rack\n\r\
+:        : torturesmith list 5-10\n\r\
 :        : torturesmith list all\n\r\
 This skill allows a player to craft implements of execution and torture.  The extent of \
 the items which can be crafted expands as the player goes up in \
@@ -2059,6 +2102,7 @@ Usage    : WAINWRIGHT (LIST/INFO/LEARN) [ITEM NAME]\n\r\
 Example  : wainwright wagon\n\r\
 :        : wainwright list\n\r\
 :        : wainwright list wagon\n\r\
+:        : wainwright list 5-10\n\r\
 :        : wainwright list all\n\r\
 :        : wainwright learn cart\n\r\
 This skill allows a player to craft wagons and carts.  The extent of \
@@ -2077,6 +2121,7 @@ Usage    : WANDMAKE (LIST/INFO/MEND/SCAN/LEARN) [WAND or CORE NAME]\n\r\
 Example  : wandmake Iron-shod wand\n\r\
 :        : wandmake list\n\r\
 :        : wandmake list Iron-shod\n\r\
+:        : wandmake list 5-10\n\r\
 :        : wandmake list all\n\r\
 :        : wandmake scan\n\r\
 :        : wandmake scan bob\n\r\
@@ -2100,6 +2145,7 @@ Example  : weaponsmith twohanded sword\n\r\
 :        : weaponsmith list\n\r\
 :        : weaponsmith list Butchers Knife\n\r\
 :        : weaponsmith list blunt\n\r\
+:        : weaponsmith list 5-10\n\r\
 :        : weaponsmith list all\n\r\
 :        : weaponsmith scan\n\r\
 :        : weaponsmith scan bob\n\r\
@@ -2127,6 +2173,7 @@ Example  : weave basket\n\r\
 :        : weave bundle 100 vine\n\r\
 :        : weave list\n\r\
 :        : weave list vest\n\r\
+:        : weave list 5-10\n\r\
 :        : weave list all\n\r\
 :        : weave mend vest\n\r\
 :        : weave refit sleeves\n\r\
